# ersilia-ml-benchmark

./: .gitignore  README.md  pyproject.toml
notebooks/: lazyqsar_tests.ipynb  test.ipynb  zairachem_tests.ipynb
results/: lazyqsar_comparison.csv
results/lazyqsar_no_rdkit/default/: ames.csv  bioavailability-ma.csv  cyp2c9-substrate-carbonmangels.csv  cyp2c9-veith.csv  cyp2d6-substrate-carbonmangels.csv  cyp2d6-veith.csv  cyp3a4-veith.csv  dili.csv  herg.csv  hia-hou.csv  pgp-broccatelli.csv
results/lazyqsar_no_rdkit/fast/: ames.csv  bioavailability-ma.csv  cyp2c9-veith.csv  cyp2d6-veith.csv  dili.csv  pgp-broccatelli.csv  summary_scores.csv
results/lazyqsar_no_rdkit/slow/: ames.csv  bioavailability-ma.csv  cyp3a4-substrate-carbonmangels.csv  cyp3a4-veith.csv  herg.csv  pgp-broccatelli.csv
results/lazyqsar_only_rdkit/fast/: ames.csv  bioavailability-ma.csv  cyp2c9-substrate-carbonmangels.csv  cyp2c9-veith.csv  cyp3a4-veith.csv  dili.csv  pgp-broccatelli.csv  summary_scores.csv
results/lazyqsar_rdkit/default/: ames.csv  bioavailability-ma.csv  cyp2c9-substrate-carbonmangels.csv  cyp2d6-veith.csv  cyp3a4-veith.csv  dili.csv  pgp-broccatelli.csv  summary_scores.csv
results/lazyqsar_rdkit/fast/: cyp2d6-veith.csv  dili.csv  (+7 more)
results/lazyqsar_v2.2/: lazyqsar_comparison.csv
results/lazyqsar_v3/: lazyqsar_comparison.csv
src/: calculate_ersilia_descs.sh  defaults.py  descriptors.json  lazyqsar.py  lazyqsar_agnostic.py  lazyqsar_analysis.py  lazyqsar_benchmark.py  save_benchmarks.py  tdcomms_benchmarks.py  zairachem.sh  zairachem_polaris.sh  zairachem_tdcomms.sh
(+364 files in other folders)
